test/neg/bug182.scala
class Foo { class I; }
class Bar extends Foo { class I; }
